# styrit-secretary-manager

./: .gitignore  Makefile  Readme.md  docker-compose.yml  gamma_setup.sql  package.json  release.sh
.github/: CODEOWNERS
backend/: .dockerignore  .gitignore  Pipfile  codes.py  config.json  dev.Dockerfile  dev_start.sh  examples.md  main.py  main_old.py  prod.Dockerfile  requirements.txt  start.sh
backend-new/: .env  .env.example  Cargo.toml  some_sql.sql
backend-new/migrations/: 20221109210926_migrate.down.sql  20221109210926_migrate.up.sql
backend-new/src/: main.rs
backend-new/src/api/: auth.rs  config.rs  mod.rs
backend-new/src/api/models/: meeting.rs
backend-new/src/db/: config_repository.rs  group_meeting_repository.rs  group_meeting_task_repository.rs  group_repository.rs  group_year_repository.rs  meeting_repository.rs  mod.rs  task_repository.rs
backend-new/src/models/: config.rs  group.rs  group_task_code.rs  group_year.rs  meeting.rs  meeting_story_group.rs  mod.rs  task.rs
backend-new/src/service/: admin_service.rs
backend-new/src/util/: config.rs  mod.rs  response.rs  secretary_error.rs
backend/config/: codes.json  config.json  meeting_config.json
backend/examples/: api_admin_config_meeting.json  api_admin_config_meeting_request.json  api_admin_config_meeting_response.json  api_admin_config_stories_request.json  api_admin_config_stories_response.json  api_admin_request.json  (+5 more)
frontend/: .env.development  dev.Dockerfile  dev.old.Dockerfile  package.json  prod.Dockerfile
frontend_new/: .gitignore  dev.Dockerfile  package.json
(+286 files in other folders)
